kube/tidal_deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: tidal
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: tidal
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tidal
  labels:
    app: tidal
    digitalocean.com/copy-identifier: bken
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tidal
  template:
    metadata:
      labels:
        app: tidal
    spec:
      containers:
        - name: tidal
          image: registry.digitalocean.com/bken/tidal:088f8c5eebc85ac2122a0e194b1745645619d525
          ports:
            - containerPort: 5000
