kube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bken-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "bken.io"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: reef
                port:
                  number: 80
    - host: "api.bken.io"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: pier
                port:
                  number: 80
    - host: "tidal.bken.io"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: tidal
                port:
                  number: 80
